initialSetup/main/default/objects/Research_Study__c/Research_Study__c.object-meta.xml
<CustomObject>
    <label>Research Study</label>
    <nameField>
        <label>Study Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>