initialSetup/main/default/objects/Research_Study__c/fields/CRO_Preferance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>CRO_Preferance_Criteria__c</fullName>
    <label>CRO Preferance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>