initialSetup/main/default/objects/Research_Study__c/fields/Patient_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Patient_Criteria__c</fullName>
    <label>Patient Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>