initialSetup/main/default/objects/Research_Study__c/fields/PCP_Patient_Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>PCP_Patient_Eligibility_Criteria__c</fullName>
    <label>PCP Patient Eligibility Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>