initialSetup/main/default/objects/Research_Study__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>