initialSetup/main/default/objects/Research_Study__c/fields/Research_Drug__c.field-meta.xml
<CustomField>
    <fullName>Research_Drug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Drug</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Research Studies</relationshipLabel>
    <relationshipName>Research_Studies</relationshipName>
    <type>Lookup</type>
</CustomField>