initialSetup/main/default/objects/Research_Study__c/fields/Site_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Site_Criteria__c</fullName>
    <label>Site Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>